--- a/Arvy-new-temp/Motor-Project/css/style.css
+++ b/Arvy-new-temp/Motor-Project/css/style.css
@@ -57,10 +57,35 @@
 
   h1.fittext {
   margin-bottom: 10px;
-  font-size: 90px;
   font-weight: 500;
-  line-height: 100%;
+
+
 }
+@media only screen and (max-width: 600px) {
+	h1.fittext {
+		margin-bottom: 10px;
+		font-weight: 500;
+		font-size: 20px;
+		
+	  }
+  }
+  @media only screen and (max-width: 600px) {
+	.fittext2 {
+		margin-bottom: 10px;
+		font-weight: 500;
+		font-size: 20px;
+		
+	  }
+  }
+
+ 
+
+.fittext2 {
+	margin-bottom: 8px;
+	font-weight: 500;
+	line-height: 100%;
+	font-size: 7vw;
+  }
 h1.fittext1 {
   margin-bottom: 10px;
   font-size: 70px;
@@ -209,3 +234,16 @@ h1.fittext1 {
 	color: #ddd;
 	margin: auto;
 }
+
+.footer{
+	background-color: black;
+	color: white;
+	width: 100%;
+	margin-top: 20px;
+	text-align: center;
+	padding: 20px;
+}
+
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
